package app.decorator;

public interface Pizza {

  public String prepare();
}
